lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> if
Rule 8     instruction -> loop
Rule 9     instruction -> return ;
Rule 10    instruction -> assignment ;
Rule 11    instruction -> print ;
Rule 12    instruction -> breakContinue
Rule 13    breakContinue -> BREAK ;
Rule 14    breakContinue -> CONTINUE ;
Rule 15    if -> IF ( expression ) instruction
Rule 16    if -> IF ( expression ) instruction ELSE instruction
Rule 17    loop -> for
Rule 18    loop -> while
Rule 19    for -> FOR ID = expression : expression instruction
Rule 20    while -> WHILE ( expression ) instruction
Rule 21    return -> RETURN
Rule 22    return -> RETURN expression
Rule 23    assignment -> assignable assign_operator expression
Rule 24    assign_operator -> =
Rule 25    assign_operator -> ADDASSIGN
Rule 26    assign_operator -> SUBASSIGN
Rule 27    assign_operator -> MULASSIGN
Rule 28    assign_operator -> DIVASSIGN
Rule 29    assignable -> id
Rule 30    assignable -> id [ function_args ]
Rule 31    id -> ID
Rule 32    print -> PRINT printable_list
Rule 33    printable_list -> printable_list , printable
Rule 34    printable_list -> printable
Rule 35    printable -> string
Rule 36    printable -> expression
Rule 37    string -> STRING
Rule 38    expression -> int
Rule 39    expression -> float
Rule 40    expression -> assignable
Rule 41    expression -> bracketed
Rule 42    expression -> matrix
Rule 43    expression -> matrix_function
Rule 44    expression -> binary_expr
Rule 45    expression -> uminus
Rule 46    expression -> transposition
Rule 47    bracketed -> ( expression )
Rule 48    int -> INTNUM
Rule 49    float -> FLOATNUM
Rule 50    binary_expr -> expression + expression
Rule 51    binary_expr -> expression - expression
Rule 52    binary_expr -> expression * expression
Rule 53    binary_expr -> expression / expression
Rule 54    binary_expr -> expression DOTADD expression
Rule 55    binary_expr -> expression DOTSUB expression
Rule 56    binary_expr -> expression DOTMUL expression
Rule 57    binary_expr -> expression DOTDIV expression
Rule 58    binary_expr -> expression < expression
Rule 59    binary_expr -> expression > expression
Rule 60    binary_expr -> expression ELESS expression
Rule 61    binary_expr -> expression EGREATER expression
Rule 62    binary_expr -> expression EQUALS expression
Rule 63    binary_expr -> expression NEQUALS expression
Rule 64    uminus -> - expression
Rule 65    transposition -> expression '
Rule 66    matrix -> [ vector_1 ]
Rule 67    vector_1 -> vector_1 , [ vector_2 ]
Rule 68    vector_1 -> [ vector_2 ]
Rule 69    vector_2 -> vector_2 , expression
Rule 70    vector_2 -> expression
Rule 71    matrix_function -> function_name ( function_args )
Rule 72    function_name -> EYE
Rule 73    function_name -> ZEROS
Rule 74    function_name -> ONES
Rule 75    function_args -> function_args , expression
Rule 76    function_args -> expression

Terminals, with rules where they appear

'                    : 65
(                    : 15 16 20 47 71
)                    : 15 16 20 47 71
*                    : 52
+                    : 50
,                    : 33 67 69 75
-                    : 51 64
/                    : 53
:                    : 19
;                    : 9 10 11 13 14
<                    : 58
=                    : 19 24
>                    : 59
ADDASSIGN            : 25
BREAK                : 13
CONTINUE             : 14
DIVASSIGN            : 28
DOTADD               : 54
DOTDIV               : 57
DOTMUL               : 56
DOTSUB               : 55
EGREATER             : 61
ELESS                : 60
ELSE                 : 16
EQUALS               : 62
EYE                  : 72
FLOATNUM             : 49
FOR                  : 19
ID                   : 19 31
IF                   : 15 16
INTNUM               : 48
MULASSIGN            : 27
NEQUALS              : 63
ONES                 : 74
PRINT                : 32
RETURN               : 21 22
STRING               : 37
SUBASSIGN            : 26
WHILE                : 20
ZEROS                : 73
[                    : 30 66 67 68
]                    : 30 66 67 68
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assign_operator      : 23
assignable           : 23 40
assignment           : 10
binary_expr          : 44
bracketed            : 41
breakContinue        : 12
expression           : 15 16 19 19 20 22 23 36 47 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 65 69 70 75 76
float                : 39
for                  : 17
function_args        : 30 71 75
function_name        : 71
id                   : 29 30
if                   : 7
instruction          : 4 5 15 16 16 19 20
instructions         : 2 4 6
instructions_opt     : 1
int                  : 38
loop                 : 8
matrix               : 42
matrix_function      : 43
print                : 11
printable            : 33 34
printable_list       : 32 33
program              : 0
return               : 9
string               : 35
transposition        : 46
uminus               : 45
vector_1             : 66 67
vector_2             : 67 68 69
while                : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . return ;
    (10) instruction -> . assignment ;
    (11) instruction -> . print ;
    (12) instruction -> . breakContinue
    (15) if -> . IF ( expression ) instruction
    (16) if -> . IF ( expression ) instruction ELSE instruction
    (17) loop -> . for
    (18) loop -> . while
    (21) return -> . RETURN
    (22) return -> . RETURN expression
    (23) assignment -> . assignable assign_operator expression
    (32) print -> . PRINT printable_list
    (13) breakContinue -> . BREAK ;
    (14) breakContinue -> . CONTINUE ;
    (19) for -> . FOR ID = expression : expression instruction
    (20) while -> . WHILE ( expression ) instruction
    (29) assignable -> . id
    (30) assignable -> . id [ function_args ]
    (31) id -> . ID

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 5
    IF              shift and go to state 12
    RETURN          shift and go to state 15
    PRINT           shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 22
    ID              shift and go to state 21

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    loop                           shift and go to state 7
    return                         shift and go to state 8
    assignment                     shift and go to state 9
    print                          shift and go to state 10
    breakContinue                  shift and go to state 11
    for                            shift and go to state 13
    while                          shift and go to state 14
    assignable                     shift and go to state 16
    id                             shift and go to state 23

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . return ;
    (10) instruction -> . assignment ;
    (11) instruction -> . print ;
    (12) instruction -> . breakContinue
    (15) if -> . IF ( expression ) instruction
    (16) if -> . IF ( expression ) instruction ELSE instruction
    (17) loop -> . for
    (18) loop -> . while
    (21) return -> . RETURN
    (22) return -> . RETURN expression
    (23) assignment -> . assignable assign_operator expression
    (32) print -> . PRINT printable_list
    (13) breakContinue -> . BREAK ;
    (14) breakContinue -> . CONTINUE ;
    (19) for -> . FOR ID = expression : expression instruction
    (20) while -> . WHILE ( expression ) instruction
    (29) assignable -> . id
    (30) assignable -> . id [ function_args ]
    (31) id -> . ID

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 5
    IF              shift and go to state 12
    RETURN          shift and go to state 15
    PRINT           shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 22
    ID              shift and go to state 21

    instruction                    shift and go to state 24
    if                             shift and go to state 6
    loop                           shift and go to state 7
    return                         shift and go to state 8
    assignment                     shift and go to state 9
    print                          shift and go to state 10
    breakContinue                  shift and go to state 11
    for                            shift and go to state 13
    while                          shift and go to state 14
    assignable                     shift and go to state 16
    id                             shift and go to state 23

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . return ;
    (10) instruction -> . assignment ;
    (11) instruction -> . print ;
    (12) instruction -> . breakContinue
    (15) if -> . IF ( expression ) instruction
    (16) if -> . IF ( expression ) instruction ELSE instruction
    (17) loop -> . for
    (18) loop -> . while
    (21) return -> . RETURN
    (22) return -> . RETURN expression
    (23) assignment -> . assignable assign_operator expression
    (32) print -> . PRINT printable_list
    (13) breakContinue -> . BREAK ;
    (14) breakContinue -> . CONTINUE ;
    (19) for -> . FOR ID = expression : expression instruction
    (20) while -> . WHILE ( expression ) instruction
    (29) assignable -> . id
    (30) assignable -> . id [ function_args ]
    (31) id -> . ID

    {               shift and go to state 5
    IF              shift and go to state 12
    RETURN          shift and go to state 15
    PRINT           shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 22
    ID              shift and go to state 21

    instructions                   shift and go to state 25
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    loop                           shift and go to state 7
    return                         shift and go to state 8
    assignment                     shift and go to state 9
    print                          shift and go to state 10
    breakContinue                  shift and go to state 11
    for                            shift and go to state 13
    while                          shift and go to state 14
    assignable                     shift and go to state 16
    id                             shift and go to state 23

state 6

    (7) instruction -> if .

    {               reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    PRINT           reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    ID              reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    }               reduce using rule 7 (instruction -> if .)
    ELSE            reduce using rule 7 (instruction -> if .)


state 7

    (8) instruction -> loop .

    {               reduce using rule 8 (instruction -> loop .)
    IF              reduce using rule 8 (instruction -> loop .)
    RETURN          reduce using rule 8 (instruction -> loop .)
    PRINT           reduce using rule 8 (instruction -> loop .)
    BREAK           reduce using rule 8 (instruction -> loop .)
    CONTINUE        reduce using rule 8 (instruction -> loop .)
    FOR             reduce using rule 8 (instruction -> loop .)
    WHILE           reduce using rule 8 (instruction -> loop .)
    ID              reduce using rule 8 (instruction -> loop .)
    $end            reduce using rule 8 (instruction -> loop .)
    }               reduce using rule 8 (instruction -> loop .)
    ELSE            reduce using rule 8 (instruction -> loop .)


state 8

    (9) instruction -> return . ;

    ;               shift and go to state 26


state 9

    (10) instruction -> assignment . ;

    ;               shift and go to state 27


state 10

    (11) instruction -> print . ;

    ;               shift and go to state 28


state 11

    (12) instruction -> breakContinue .

    {               reduce using rule 12 (instruction -> breakContinue .)
    IF              reduce using rule 12 (instruction -> breakContinue .)
    RETURN          reduce using rule 12 (instruction -> breakContinue .)
    PRINT           reduce using rule 12 (instruction -> breakContinue .)
    BREAK           reduce using rule 12 (instruction -> breakContinue .)
    CONTINUE        reduce using rule 12 (instruction -> breakContinue .)
    FOR             reduce using rule 12 (instruction -> breakContinue .)
    WHILE           reduce using rule 12 (instruction -> breakContinue .)
    ID              reduce using rule 12 (instruction -> breakContinue .)
    $end            reduce using rule 12 (instruction -> breakContinue .)
    }               reduce using rule 12 (instruction -> breakContinue .)
    ELSE            reduce using rule 12 (instruction -> breakContinue .)


state 12

    (15) if -> IF . ( expression ) instruction
    (16) if -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 29


state 13

    (17) loop -> for .

    {               reduce using rule 17 (loop -> for .)
    IF              reduce using rule 17 (loop -> for .)
    RETURN          reduce using rule 17 (loop -> for .)
    PRINT           reduce using rule 17 (loop -> for .)
    BREAK           reduce using rule 17 (loop -> for .)
    CONTINUE        reduce using rule 17 (loop -> for .)
    FOR             reduce using rule 17 (loop -> for .)
    WHILE           reduce using rule 17 (loop -> for .)
    ID              reduce using rule 17 (loop -> for .)
    $end            reduce using rule 17 (loop -> for .)
    }               reduce using rule 17 (loop -> for .)
    ELSE            reduce using rule 17 (loop -> for .)


state 14

    (18) loop -> while .

    {               reduce using rule 18 (loop -> while .)
    IF              reduce using rule 18 (loop -> while .)
    RETURN          reduce using rule 18 (loop -> while .)
    PRINT           reduce using rule 18 (loop -> while .)
    BREAK           reduce using rule 18 (loop -> while .)
    CONTINUE        reduce using rule 18 (loop -> while .)
    FOR             reduce using rule 18 (loop -> while .)
    WHILE           reduce using rule 18 (loop -> while .)
    ID              reduce using rule 18 (loop -> while .)
    $end            reduce using rule 18 (loop -> while .)
    }               reduce using rule 18 (loop -> while .)
    ELSE            reduce using rule 18 (loop -> while .)


state 15

    (21) return -> RETURN .
    (22) return -> RETURN . expression
    (38) expression -> . int
    (39) expression -> . float
    (40) expression -> . assignable
    (41) expression -> . bracketed
    (42) expression -> . matrix
    (43) expression -> . matrix_function
    (44) expression -> . binary_expr
    (45) expression -> . uminus
    (46) expression -> . transposition
    (48) int -> . INTNUM
    (49) float -> . FLOATNUM
    (29) assignable -> . id
    (30) assignable -> . id [ function_args ]
    (47) bracketed -> . ( expression )
    (66) matrix -> . [ vector_1 ]
    (71) matrix_function -> . function_name ( function_args )
    (50) binary_expr -> . expression + expression
    (51) binary_expr -> . expression - expression
    (52) binary_expr -> . expression * expression
    (53) binary_expr -> . expression / expression
    (54) binary_expr -> . expression DOTADD expression
    (55) binary_expr -> . expression DOTSUB expression
    (56) binary_expr -> . expression DOTMUL expression
    (57) binary_expr -> . expression DOTDIV expression
    (58) binary_expr -> . expression < expression
    (59) binary_expr -> . expression > expression
    (60) binary_expr -> . expression ELESS expression
    (61) binary_expr -> . expression EGREATER expression
    (62) binary_expr -> . expression EQUALS expression
    (63) binary_expr -> . expression NEQUALS expression
    (64) uminus -> . - expression
    (65) transposition -> . expression '
    (31) id -> . ID
    (72) function_name -> . EYE
    (73) function_name -> . ZEROS
    (74) function_name -> . ONES

    ;               reduce using rule 21 (return -> RETURN .)
    INTNUM          shift and go to state 40
    FLOATNUM        shift and go to state 41
    (               shift and go to state 43
    [               shift and go to state 42
    -               shift and go to state 45
    ID              shift and go to state 21
    EYE             shift and go to state 46
    ZEROS           shift and go to state 47
    ONES            shift and go to state 48

    expression                     shift and go to state 30
    int                            shift and go to state 31
    float                          shift and go to state 32
    assignable                     shift and go to state 33
    bracketed                      shift and go to state 34
    matrix                         shift and go to state 35
    matrix_function                shift and go to state 36
    binary_expr                    shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    id                             shift and go to state 23
    function_name                  shift and go to state 44

state 16

    (23) assignment -> assignable . assign_operator expression
    (24) assign_operator -> . =
    (25) assign_operator -> . ADDASSIGN
    (26) assign_operator -> . SUBASSIGN
    (27) assign_operator -> . MULASSIGN
    (28) assign_operator -> . DIVASSIGN

    =               shift and go to state 50
    ADDASSIGN       shift and go to state 51
    SUBASSIGN       shift and go to state 52
    MULASSIGN       shift and go to state 53
    DIVASSIGN       shift and go to state 54

    assign_operator                shift and go to state 49

state 17

    (32) print -> PRINT . printable_list
    (33) printable_list -> . printable_list , printable
    (34) printable_list -> . printable
    (35) printable -> . string
    (36) printable -> . expression
    (37) string -> . STRING
    (38) expression -> . int
    (39) expression -> . float
    (40) expression -> . assignable
    (41) expression -> . bracketed
    (42) expression -> . matrix
    (43) expression -> . matrix_function
    (44) expression -> . binary_expr
    (45) expression -> . uminus
    (46) expression -> . transposition
    (48) int -> . INTNUM
    (49) float -> . FLOATNUM
    (29) assignable -> . id
    (30) assignable -> . id [ function_args ]
    (47) bracketed -> . ( expression )
    (66) matrix -> . [ vector_1 ]
    (71) matrix_function -> . function_name ( function_args )
    (50) binary_expr -> . expression + expression
    (51) binary_expr -> . expression - expression
    (52) binary_expr -> . expression * expression
    (53) binary_expr -> . expression / expression
    (54) binary_expr -> . expression DOTADD expression
    (55) binary_expr -> . expression DOTSUB expression
    (56) binary_expr -> . expression DOTMUL expression
    (57) binary_expr -> . expression DOTDIV expression
    (58) binary_expr -> . expression < expression
    (59) binary_expr -> . expression > expression
    (60) binary_expr -> . expression ELESS expression
    (61) binary_expr -> . expression EGREATER expression
    (62) binary_expr -> . expression EQUALS expression
    (63) binary_expr -> . expression NEQUALS expression
    (64) uminus -> . - expression
    (65) transposition -> . expression '
    (31) id -> . ID
    (72) function_name -> . EYE
    (73) function_name -> . ZEROS
    (74) function_name -> . ONES

    STRING          shift and go to state 59
    INTNUM          shift and go to state 40
    FLOATNUM        shift and go to state 41
    (               shift and go to state 43
    [               shift and go to state 42
    -               shift and go to state 45
    ID              shift and go to state 21
    EYE             shift and go to state 46
    ZEROS           shift and go to state 47
    ONES            shift and go to state 48

    printable_list                 shift and go to state 55
    printable                      shift and go to state 56
    string                         shift and go to state 57
    expression                     shift and go to state 58
    int                            shift and go to state 31
    float                          shift and go to state 32
    assignable                     shift and go to state 33
    bracketed                      shift and go to state 34
    matrix                         shift and go to state 35
    matrix_function                shift and go to state 36
    binary_expr                    shift and go to state 37
    uminus                         shift and go to state 38
    transposition                  shift and go to state 39
    id                             shift and go to state 23
    function_name                  shift and go to state 44

state 18

    (13) breakContinue -> BREAK . ;

    ;               shift and go to state 60


state 19

    (14) breakContinue -> CONTINUE . ;

    ;               shift and go to state 61


state 20

    (19) for -> FOR . ID = expression : expression instruction

    ID              shift and go to state 62


state 21

    (31) id -> ID .

    [               reduce using rule 31 (id -> ID .)
    =               reduce using rule 31 (id -> ID .)
    ADDASSIGN       reduce using rule 31 (id -> ID .)
    SUBASSIGN       reduce using rule 31 (id -> ID .)
    MULASSIGN       reduce using rule 31 (id -> ID .)
    DIVASSIGN       reduce using rule 31 (id -> ID .)
    +               reduce using rule 31 (id -> ID .)
    -               reduce using rule 31 (id -> ID .)
    *               reduce using rule 31 (id -> ID .)
    /               reduce using rule 31 (id -> ID .)
    DOTADD          reduce using rule 31 (id -> ID .)
    DOTSUB          reduce using rule 31 (id -> ID .)
    DOTMUL          reduce using rule 31 (id -> ID .)
    DOTDIV          reduce using rule 31 (id -> ID .)
    <               reduce using rule 31 (id -> ID .)
    >               reduce using rule 31 (id -> ID .)
    ELESS           reduce using rule 31 (id -> ID .)
    EGREATER        reduce using rule 31 (id -> ID .)
    EQUALS          reduce using rule 31 (id -> ID .)
    NEQUALS         reduce using rule 31 (id -> ID .)
    '               reduce using rule 31 (id -> ID .)
    ;               reduce using rule 31 (id -> ID .)
    ,               reduce using rule 31 (id -> ID .)
    )               reduce using rule 31 (id -> ID .)
    ]               reduce using rule 31 (id -> ID .)
    :               reduce using rule 31 (id -> ID .)
    {               reduce using rule 31 (id -> ID .)
    IF              reduce using rule 31 (id -> ID .)
    RETURN          reduce using rule 31 (id -> ID .)
    PRINT           reduce using rule 31 (id -> ID .)
    BREAK           reduce using rule 31 (id -> ID .)
    CONTINUE        reduce using rule 31 (id -> ID .)
    FOR             reduce using rule 31 (id -> ID .)
    WHILE           reduce using rule 31 (id -> ID .)
    ID              reduce using rule 31 (id -> ID .)


state 22

    (20) while -> WHILE . ( expression ) instruction

    (               shift and go to state 63


state 23

    (29) assignable -> id .
    (30) assignable -> id . [ function_args ]

    =               reduce using rule 29 (assignable -> id .)
    ADDASSIGN       reduce using rule 29 (assignable -> id .)
    SUBASSIGN       reduce using rule 29 (assignable -> id .)
    MULASSIGN       reduce using rule 29 (assignable -> id .)
    DIVASSIGN       reduce using rule 29 (assignable -> id .)
    +               reduce using rule 29 (assignable -> id .)
    -               reduce using rule 29 (assignable -> id .)
    *               reduce using rule 29 (assignable -> id .)
    /               reduce using rule 29 (assignable -> id .)
    DOTADD          reduce using rule 29 (assignable -> id .)
    DOTSUB          reduce using rule 29 (assignable -> id .)
    DOTMUL          reduce using rule 29 (assignable -> id .)
    DOTDIV          reduce using rule 29 (assignable -> id .)
    <               reduce using rule 29 (assignable -> id .)
    >               reduce using rule 29 (assignable -> id .)
    ELESS           reduce using rule 29 (assignable -> id .)
    EGREATER        reduce using rule 29 (assignable -> id .)
    EQUALS          reduce using rule 29 (assignable -> id .)
    NEQUALS         reduce using rule 29 (assignable -> id .)
    '               reduce using rule 29 (assignable -> id .)
    ;               reduce using rule 29 (assignable -> id .)
    ,               reduce using rule 29 (assignable -> id .)
    )               reduce using rule 29 (assignable -> id .)
    ]               reduce using rule 29 (assignable -> id .)
    :               reduce using rule 29 (assignable -> id .)
    {               reduce using rule 29 (assignable -> id .)
    IF              reduce using rule 29 (assignable -> id .)
    RETURN          reduce using rule 29 (assignable -> id .)
    PRINT           reduce using rule 29 (assignable -> id .)
    BREAK           reduce using rule 29 (assignable -> id .)
    CONTINUE        reduce using rule 29 (assignable -> id .)
    FOR             reduce using rule 29 (assignable -> id .)
    WHILE           reduce using rule 29 (assignable -> id .)
    ID              reduce using rule 29 (assignable -> id .)
    [               shift and go to state 64


state 24

    (4) instructions -> instructions instruction .

    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 25

    (6) instruction -> { instructions . }
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . if
    (8) instruction -> . loop
    (9) instruction -> . return ;
    (10) instruction -> . assignment ;
    (11) instruction -> . print ;
    (12) instruction -> . breakContinue
    (15) if -> . IF ( expression ) instruction
    (16) if -> . IF ( expression ) instruction ELSE instruction
    (17) loop -> . for
    (18) loop -> . while
    (21) return -> . RETURN
    (22) return -> . RETURN expression
    (23) assignment -> . assignable assign_operator expression
    (32) print -> . PRINT printable_list
    (13) breakContinue -> . BREAK ;
    (14) breakContinue -> . CONTINUE ;
    (19) for -> . FOR ID = expression : expression instruction
    (20) while -> . WHILE ( expression ) instruction
    (29) assignable -> . id
    (30) assignable -> . id [ function_args ]
    (31) id -> . ID

    }               shift and go to state 65
    {               shift and go to state 5
    IF              shift and go to state 12
    RETURN          shift and go to state 15
    PRINT           shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 22
    ID              shift and go to state 21
